--- a/App/ios/App/Info.plist
+++ b/App/ios/App/Info.plist
@@ -40,11 +40,11 @@
 		</dict>
 	</dict>
 	<key>NSCameraUsageDescription</key>
-	<string>使用相機掃描qrcode</string>
+	<string>App需要您的同意,才能訪問相機</string>
 	<key>NSLocationAlwaysUsageDescription</key>
-	<string>在地圖上取得您的位置</string>
+	<string>App需要您的同意,才能在使用期間訪問位置<</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>在地圖上取得您的位置</string>
+	<string>App需要您的同意,才能在使用期間訪問位置<</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string></string>
 	<key>UILaunchStoryboardName</key>
