--- a/App/ios/App/Info.plist
+++ b/App/ios/App/Info.plist
@@ -42,9 +42,9 @@
 	<key>NSCameraUsageDescription</key>
 	<string>App需要您的同意,才能訪問相機</string>
 	<key>NSLocationAlwaysUsageDescription</key>
-	<string>App需要您的同意,才能在使用期間訪問位置<</string>
+	<string>App需要您的同意,才能在使用期間訪問位置</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>App需要您的同意,才能在使用期間訪問位置<</string>
+	<string>App需要您的同意,才能在使用期間訪問位置</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string></string>
 	<key>UILaunchStoryboardName</key>
