--- a/App/ios/App/Info.plist
+++ b/App/ios/App/Info.plist
@@ -40,11 +40,11 @@
 		</dict>
 	</dict>
 	<key>NSCameraUsageDescription</key>
-	<string>App需要您的同意,才能訪問相機</string>
+	<string>應用程式需要訪問您的相機才能掃描條形碼和二維碼圖像</string>
 	<key>NSLocationAlwaysUsageDescription</key>
-	<string>App需要您的同意,才能在使用期間訪問位置</string>
+	<string>目前應用程式只有在你使用時，才能在存取位置資訊</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>App需要您的同意,才能在使用期間訪問位置</string>
+	<string>目前應用程式只有在你使用時，才能在存取位置資訊</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string></string>
 	<key>UILaunchStoryboardName</key>
