--- a/App/android/app/build.gradle
+++ b/App/android/app/build.gradle
@@ -195,6 +195,7 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation 'com.android.support:multidex:1.0.3'
+    // implementation(name: 'tpdirect', ext: 'aar')
 
     if (enableHermes) {
         def hermesPath = "../../node_modules/hermes-engine/android/";
