--- a/App/android/build.gradle
+++ b/App/android/build.gradle
@@ -38,5 +38,8 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://jitpack.io' }
+        // flatDir {
+        //     dirs 'libs'
+        // }
     }
 }
