--- a/App/package.json
+++ b/App/package.json
@@ -43,6 +43,7 @@
     "react-native-svg": "^12.0.2",
     "react-native-svg-image": "^2.0.1",
     "react-native-svg-uri": "^1.2.3",
+    "react-native-webview": "^10.3.2",
     "react-navigation": "^4.0.10",
     "react-navigation-transitions": "^1.0.12",
     "react-redux": "^7.2.0",
