--- a/App/ios/App/Info.plist
+++ b/App/ios/App/Info.plist
@@ -48,7 +48,7 @@
 	<key>NSMicrophoneUsageDescription</key>
 	<string></string>
 	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
+	<string>NO</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
